--- a/rpi-ups-pi5.dts
+++ b/rpi-ups-pi5.dts
@@ -5,7 +5,7 @@
 	compatible = "raspberrypi,5-model-b", "brcm,bcm2712";
 	
 	fragment@0 {
-		target = <&i2c_arm>;
+		target = <&i2c1>;
 		__overlay__ {
 			#address-cells = <1>;
 			#size-cells = <0>;
